hphp/hack/test/enum_class/typing/typing.extends1.bad.php.exp
File "typing.extends1.bad.php", line 63, characters 18-21:
Invalid argument (Typing[4110])
  File "typing.extends1.bad.php", line 36, characters 3-3:
  Expected `F`
  File "typing.extends1.bad.php", line 58, characters 22-22:
  But got `E`
  File "typing.extends1.bad.php", line 42, characters 40-50:
    resulting from expanding the type constant `Ext::TEnum`
  File "typing.extends1.bad.php", line 58, characters 22-22:
  This type argument to `HH\EnumMember` only allows supertypes (it is contravariant)
